@@ -1,3 +1,6 @@
+Aug 12, 2022
+  BulkGeneRename: implemented dry-run mode
+
 Aug 10, 2022
   gene_history: better conflict reporting
 
